Bug 1225798 - part 1: add better error reporting for reading list importer's ESE handling, r=MattN