browser/components/migration/nsEdgeReadingListExtractor.cpp
@@ -197,7 +197,13 @@ nsEdgeReadingListExtractor::ConvertJETError(const JET_ERR &aError)
       return NS_ERROR_FILE_INVALID_PATH;
     case JET_errFileNotFound:
       return NS_ERROR_FILE_NOT_FOUND;
+    case JET_errDatabaseDirtyShutdown:
+      return NS_ERROR_FILE_CORRUPTED;
     default:
+      nsCOMPtr<nsIConsoleService> consoleService = do_GetService(NS_CONSOLESERVICE_CONTRACTID);
+      wchar_t* msg = new wchar_t[80];
+      swprintf(msg, 80, MOZ_UTF16("Unexpected JET error from ESE database: %ld"), aError);
+      consoleService->LogStringMessage(msg);
       return NS_ERROR_FAILURE;
   }
 }
